# ComputationalIntelligence

./: .gitattributes  .gitignore  LICENSE  Q_table.pkl
laboratories/: pyproject.toml
laboratories/Halloween/: Halloween.ipynb
laboratories/Lab01/: a-star.ipynb
laboratories/Lab02/: README.md  lab2-nim.ipynb
laboratories/Lab09/: lab9.ipynb
laboratories/Lab10/: README.md  lab10-gx.ipynb  lab10.ipynb
lectures/: greedy.ipynb  hill-climbing.ipynb  n-friends.ipynb  pyproject.toml  semester.md  set-covering.ipynb  set_covering_ea.ipynb
quixo-project/: README.md  game.py  main.py  requirements.txt
