[tool.poetry]
name = "es-10-10"
version = "0.1.0"
description = ""
authors = ["Gabbo62 <93376123+Gabbo62@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11"
matplotlib = "^3.8.0"
ipykernel = "^6.25.2"
networkx = "^3.1"
pydot = "^1.4.2"
tqdm = "^4.66.1"
scipy = "^1.11.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
